--- a/WhiteElephantWebsite/WhiteElephantWebsite.csproj
+++ b/WhiteElephantWebsite/WhiteElephantWebsite.csproj
@@ -73,6 +73,7 @@
     <Content Include="admin\CategoryMaintenance.aspx" />
     <Content Include="admin\Images.aspx" />
     <Content Include="admin\Login.aspx" />
+    <Content Include="admin\ManageCustomerAccount.aspx" />
     <Content Include="admin\ProductMaintenance.aspx" />
     <Content Include="App_Themes\SiteTheme\SiteTheme.css" />
     <Content Include="Cart.aspx" />
@@ -124,6 +125,13 @@
     </Compile>
     <Compile Include="admin\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\ManageCustomerAccount.aspx.cs">
+      <DependentUpon>ManageCustomerAccount.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\ManageCustomerAccount.aspx.designer.cs">
+      <DependentUpon>ManageCustomerAccount.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\ProductMaintenance.aspx.cs">
       <DependentUpon>ProductMaintenance.aspx</DependentUpon>
