Added Stored Procedure to Project

--- a/WhiteElephantWebsite/WhiteElephantWebsite.csproj
+++ b/WhiteElephantWebsite/WhiteElephantWebsite.csproj
@@ -253,6 +253,7 @@
   <ItemGroup>
     <Folder Include="App_Themes\SiteTheme\images\" />
     <Folder Include="images\" />
+    <Folder Include="scripts\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
